Proyectos y practicas/3º/PL/PL-Practica-Final-AJS/PL_P2_AGUILAR_RODRIGUEZ/tests/propios/invalidos_semantico/test2.symbol
SCOPE: global
Type(name='Persona', attributes={'edad': 'int', 'nombre': 'character', 'sexo': 'character'}
)

